fixed wrong color on 404 return link

--- a/themes/hugo-lamp/assets/scss/partials/_error.scss
+++ b/themes/hugo-lamp/assets/scss/partials/_error.scss
@@ -17,6 +17,6 @@
   &-link {
     margin-top: 2rem;
     font-size: $size-6;
-    color: $primary;
+    color: $white;
   }
 }
